--- a/qbt/requirements.txt
+++ b/qbt/requirements.txt
@@ -1,7 +1,8 @@
-certifi==2020.12.5
-chardet==4.0.0
-idna==2.10
-qbittorrent-api==2021.2.17
-requests==2.25.1
-six==1.15.0
-urllib3==1.26.3
+certifi==2021.10.8
+charset-normalizer==2.0.12
+idna==3.3
+python-dotenv==0.19.2
+qbittorrent-api==2022.2.28
+requests==2.27.1
+six==1.16.0
+urllib3==1.26.8
